# dppd_plotnine

./: .coveragerc  .gitignore  .hgignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  README.md  README.rst  accept_generated_images.py  autobuild_docs.py  flake.nix  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pytest.yml
docs/: Makefile  aes.md  conf.py  index.rst  requirements.txt
src/dppd_plotnine/: __init__.py  dppd_plotnine.py  plotnine_extensions.py  shared.py  skeleton.py
src/dppd_plotnine/geoms/: __init__.py  annotation_stripes.py  annotation_stripes_dppd.py
tests/: conftest.py  test_annotations.py  test_dppd_plotnine.py  test_extensions.py  test_other.py  test_skeleton.py
