[project]
name = "dppd-plotnine"
version = "0.2.9"
description = "Combines plotnine and dppd"
readme = "README.md"
requires-python = ">=3.12"
authors = [
	{name = "Florian Finkernagel", email = "finkernagel@imt.uni-marburg.de"}
]
license={file="LICENSE.txt"}
dependencies = [
    "plotnine>=0.13",
	"mizani>=0.13",
    "dppd",
]

[project.urls]
Repository = "https://github.com/TyberiusPrime/dppd_plotnine"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
	dev = [
	"build",
    "numpydoc",
	"plotnine",
    "pytest",
    "pytest-cov",
    "sphinx",
    "sphinx-bootstrap-theme",
	"ruff"
]

[tool.ruff]
	exclude = [
	"docs"
]

[tool.pytest.ini_options]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = """
    --cov dppd_plotnine --cov-report term-missing
    --verbose
"""
norecursedirs = [
    "dist",
    "build",
    ".tox",
]
testpaths = "tests"
filterwarnings = [
    "ignore:::statsmodels.base.wrapper:100",
    "ignore:::patsy.constraint:13",
    "ignore:::matplotlib.backends.backend_wx:",
]

